# Catastrophe-Genesis

./: README.md
arena/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.vitest.json  vite.config.d.ts  vite.config.ts  vitest.config.d.ts  vitest.config.js  vitest.config.ts
arena/.cursor-rules/: .generate-readme-cursorrules
arena/src/: README.md  index.css  main.tsx
arena/src/app/: README.md  client.tsx  collapsible-sidebar.tsx  desktop-only.tsx  settings-sidebar.tsx
arena/src/components/: CustomConnectButton.tsx  PassportConnectButton.tsx  auth.ts  chain.ts  session.ts
arena/src/config/: constants.ts  explorerList.ts  networkConfig.ts
arena/src/entities/: README.md
arena/src/entities/card/: README.md
arena/src/entities/leaderboard/: README.md
arena/src/features/: README.md
arena/src/pages/: README.md  home.tsx  routes.tsx
arena/src/shared/: README.md
arena/src/widgets/: README.md
arena/types/: env.d.ts
catastrophe-horizon/: README.md  next.config.mjs  package.json
catastrophe-horizon/app/dashboard/: README.md  page.tsx
citadel/: .env.example  Cargo.toml  LICENSE  README-seal-cli.md  README.md  allowed_endpoints.yaml  test.sh  unset_env.sh
citadel/.github/: CODEOWNERS
citadel/move/citadel/: Move.toml  README.md
citadel/move/citadel/sources/: citadel.move
citadel/move/citadel/tests/: citadel_tests.move
citadel/src/: api.rs  app.rs  avatars.rs  cache.rs  catastrophe.rs  chat.rs  cli.rs  common.rs  errors.rs  externals.rs  game.rs  gaming.rs  keys.rs  lib.rs  main.rs  metrics.rs  passport.rs  profile.rs  sdk.rs  session_login.rs  signed_message.rs  tool.rs  txb.rs  types.rs  valid_ptb.rs  ws.rs
citadel/src/sdk/: executor.rs  manager.rs  mod.rs  query.rs
citadel/src/tests/: externals.rs  mod.rs  server.rs  tle.rs
horizon/: package.json  pnpm-lock.yaml
horizon/app/: layout.tsx  page.tsx  providers.tsx  types.tsx
horizon/app/dashboard/: page.tsx
horizon/app/login/: page.tsx
horizon/context/: AssetsContext.tsx  WalletContext.tsx
horizon/contracts/: config.ts  index.ts
horizon/hooks/: useNetwork.ts  usePassport.ts  useUserAssets.ts  useUserBalance.ts  useUserCards.ts
nexus/: Move.toml  README.md
nexus/docs/: 模块结构.md  流程图.md  设计文档.md
nexus/sources/: admin.move  card.move  fish.move  fragment.move  game.move  passport.move  rental.move  staking.move  treasury.move  user.move
nexus/tests/: admin_tests.move  card_interaction_tests.move  card_tests.move  nexus_tests.move  user_tests.move
(+72 files in other folders)
