[package]
name = "nautilus-server"
version = "0.1.0"
edition = "2021"
authors = ["Euraxluo <euraxluo@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/CatastropheArena/Catastrophe-Genesis"

[[bin]]
name = "nautilus-server"
path = "src/main.rs"

[workspace]

[dependencies]
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9", features = ["aes"] }
bcs = "0.1.6"
serde = "1.0.210"
serde_json = "1.0"
itertools = { version = "0.13.0" }
anyhow = "1.0"
rand = "0.8.5"
hex = "0.4"
clap = { version = "4.5.17", features = ["derive"] }
tracing = "0.1.37"
serde_with = "3.11.0"
serde_bytes = "0.11"
serde_repr = "0.1"

tokio = { version = "1.43.0", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.11", features = ["json"] }
serde_yaml = "0.9.34"
tower = "0.4.13"
tower-http = { version = "0.6.0", features = ["cors"] }
nsm_api = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git/", rev = "8ec7eac72bbb2097f1058ee32c13e1ff232f13e8", package="aws-nitro-enclaves-nsm-api", optional = false }
dashmap = "5.5.3"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }

# metrics
prometheus = "0.13.4"

# application specific
regex = "1.5.4"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
crypto-hash = "0.3.4"
tap = "1.0.1"
lru = "0.13.0"
parking_lot = "0.12.3"
once_cell = "1.20.2"
chrono = "0.4.39"

# Sui dependencies
crypto = { git = "https://github.com/MystenLabs/seal", tag = "seal-v0.3.0", package = "crypto" }
sui_types = { git = "https://github.com/mystenlabs/sui", rev = "1f5fef23d09fb697fff9e83907c5871c08fb6c87", package = "sui-types"}
mysten-service = { git = "https://github.com/mystenlabs/sui", rev = "1f5fef23d09fb697fff9e83907c5871c08fb6c87", package = "mysten-service" }
sui_sdk = { git = "https://github.com/mystenlabs/sui", rev = "1f5fef23d09fb697fff9e83907c5871c08fb6c87", package = "sui-sdk"}
shared_crypto = { git = "https://github.com/MystenLabs/sui", rev = "1f5fef23d09fb697fff9e83907c5871c08fb6c87", package = "shared-crypto" }


[dev-dependencies]
tracing-test = "0.2.5"
test_cluster = { git = "https://github.com/mystenlabs/sui", rev = "1f5fef23d09fb697fff9e83907c5871c08fb6c87", package = "test-cluster" }
sui_move_build = { git = "https://github.com/mystenlabs/sui", rev = "1f5fef23d09fb697fff9e83907c5871c08fb6c87", package = "sui-move-build" }
